scripts/nullaway/original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8.txt
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:19: error: [NullAway] @NonNull field aciertos_entradas not initialized
    int[] aciertos_entradas;
          ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:20: error: [NullAway] @NonNull field fallos_entradas not initialized
    int[] fallos_entradas;
          ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:22: error: [NullAway] @NonNull field aciertos_muestras not initialized
    int[] aciertos_muestras;
          ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:23: error: [NullAway] @NonNull field fallos_muestras not initialized
    int[] fallos_muestras;
          ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
    Float explicabilidad = null;
          ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:13: error: [NullAway] @NonNull field elemento not initialized
    private Elemento elemento;
                     ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:15: error: [NullAway] @NonNull field total not initialized
    private Long total;
                 ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:17: error: [NullAway] @NonNull field apariciones not initialized
    private Long apariciones;
                 ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Regla.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields antecedente (line 13), consecuente (line 14) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Regla() {
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/GrupoElementos.java:20: error: [NullAway] @NonNull field _subgrupos not initialized
    private ArrayList<GrupoElementos> _subgrupos;
                                      ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Nodo.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields elemento (line 16), padre (line 25), siguiente (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Nodo(){}
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Nodo.java:33: error: [NullAway] initializer method does not guarantee @NonNull field siguiente (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Nodo(Elemento elemento, Nodo padre){
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/RegistroTD.java:14: error: [NullAway] @NonNull field elemento not initialized
    private Elemento elemento;
                     ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/RegistroTD.java:17: error: [NullAway] @NonNull field soporte not initialized
    private Long soporte;
                 ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/RegistroTD.java:20: error: [NullAway] @NonNull field nodo not initialized
    private Nodo nodo;
                 ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Ventana.java:13: error: [NullAway] @NonNull field entradas not initialized
    int[] entradas;
          ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Delayer.java:17: error: [NullAway] @NonNull field llamable not initialized
    private Llamable llamable;
                     ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Delayer.java:19: error: [NullAway] @NonNull field contador not initialized
    Thread contador;
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:70: error: [NullAway] initializer method does not guarantee @NonNull fields ventana (line 55), historia_interna (line 57), reglas_aprendidas (line 59), cuentas (line 61), itemsets (line 67) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Hipo() {
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:73: error: [NullAway] initializer method does not guarantee @NonNull fields reglas_aprendidas (line 59), itemsets (line 67) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Hipo(int n_entradas, int t_ventana) {
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:224: error: [NullAway] dereferenced expression itemset is @Nullable
                            itemset.add(conjunto);
                                   ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:230: error: [NullAway] dereferenced expression itemset is @Nullable
                            itemset.add(conjunto);
                                   ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:278: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return itemset;
        ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:1718: error: [NullAway] dereferenced expression r_nueva is @Nullable
                GrupoElementos gn = r_nueva.getConsecuente();
                                           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:1761: error: [NullAway] passing @Nullable parameter 'nuevo' where @NonNull is required
            c.setAntecedente(nuevo);
                             ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Teoria.java:40: error: [NullAway] initializer method does not guarantee @NonNull field estados (line 23) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Teoria(){
           ^
    (see http://t.uber.com/nullaway )
../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Historia.java:23: error: [NullAway] initializer method does not guarantee @NonNull fields IDs (line 17), historia (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Historia(int numero_de_entradas, String[] identificadores, int[][] historia){
           ^
    (see http://t.uber.com/nullaway )
Note: ../original/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
